tests/baselines/reference/arithmeticOnInvalidTypes2.errors.txt
==== tests/cases/compiler/arithmeticOnInvalidTypes2.ts (7 errors) ====
    var obj = function f<T>(a: T, b: T) {
        var z1 = a + b;
                 ~~~~~
!!! error TS2365: Operator '+' cannot be applied to types 'T' and 'T'.
        var z2 = a - b;
                 ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var z3 = a * b;
                 ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var z4 = a / b;
                 ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        return a;
    };